# concordium-low-code-carbon-credit-marketplace

./: .gitmodules  LICENSE  carbon-credits-marketplace.code-workspace
contracts/: .gitignore  Cargo.toml  deploy.sh
contracts/cis2-common-utils/: Cargo.toml
contracts/cis2-common-utils/src/: cis2_client.rs  errors.rs  lib.rs
contracts/cis2-fractionalizer/: .gitignore  Cargo.toml
contracts/cis2-fractionalizer/src/: contract.rs  error.rs  lib.rs  params.rs  state.rs
contracts/cis2-market/: Cargo.toml
contracts/cis2-market/src/: errors.rs  lib.rs  params.rs  state.rs
contracts/cis2-multi/: Cargo.toml
contracts/cis2-multi/src/: lib.rs
contracts/src/: lib.rs
contracts/src/carbon_credit_market/: add.rs  error.rs  events.rs  init.rs  list.rs  on_cis2_recieved.rs  state.rs  transfer.rs
contracts/src/carbon_credits/: contract_types.rs  error.rs  init.rs  is_verified.rs  is_verifier.rs  maturity_of.rs  mod.rs  on_cis2_recieved.rs  retire.rs  retract.rs  state.rs  transfer.rs
contracts/src/cis2_utils/: cis2_client.rs  cis2_types.rs  errors.rs  mod.rs
contracts/src/client_utils/: client.rs  errors.rs  mod.rs  types.rs
contracts/src/project_fractionalizer/: balance_of.rs  contract_types.rs  error.rs  events.rs  init.rs  is_verified.rs  maturity_of.rs  mint.rs  mod.rs  on_cis2_recieved.rs  operator_of.rs  state.rs  supports.rs  token_metadata.rs  transfer.rs  update_operator.rs
contracts/src/project_nft/: balance_of.rs  contract_types.rs  error.rs  events.rs  init.rs  is_verified.rs  maturity_of.rs  mint.rs  mod.rs  operator_of.rs  retire.rs  retract.rs  state.rs  supports.rs  token_metadata.rs  transfer.rs  update_operator.rs  verifier_operations.rs
dapps/market-ui/: .env  .eslintrc  package.json
(+102 files in other folders)
