[package]
name = "cis2-common-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium-std = { version = "*", default-features = false }
concordium-cis2 = { version = "*", default-features = false }

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]